<resources>
    <string name="app_name">MyNoteBooke</string>
    <string name="note_title_hint">Enter a title for the note</string>
    <string name="note_title_label">Title</string>
    <string name="note_details_label">Details</string>
    <string name="note_solved_label">Done?</string>

    <string name="date_picker_title">Date of crime:</string>
    <string name="new_note">New Note</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d notes</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="delete">delete</string>
    <string name="saved">save</string>
    <string name="save">save</string>
    <string name="alert_dialog_title">Хотите удалить заметку?</string>
    <string name="btn_positive">delete</string>
    <string name="btn_negative">exit</string>
    <string name="alert_dialog_message">Если да, выберите delete</string>
</resources>