<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/new_note"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/new_note"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_delete_forever_24"
        android:title="@string/delete"
        app:showAsAction="ifRoom|withText" />
</menu>

<!--
android:title="@string/new_note"
app:showAsAction="never"

-->